--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 body{
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-}
+  font-family: 'Roboto', sans-serif;}
 
 h1{
   margin: 0;
@@ -56,8 +57,12 @@ h1{
   width: 45%;
   border-right: 1px solid #dedede;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
+}
+
+.weather-container img{
+  color: white;
 }
 
 .weather-details .weather-temp{
